tests/typing/errors/shadow/redefinition.smt2
(set-logic QF_UF)
(declare-fun a () Bool)
(declare-fun a () Bool)
(check-sat)
